hard-gists-me/3446681/log.txt
Traceback (most recent call last):
  File "snippet.py", line 2, in <module>
    import ldif
  File "/usr/local/lib/python2.7/site-packages/ldif.py", line 242
    encoding: Optional[str] = "utf8",
            ^
SyntaxError: invalid syntax
